--- a/assets/css/home/section-under-top.css
+++ b/assets/css/home/section-under-top.css
@@ -150,56 +150,21 @@
 }
 
 .under-top__hot-item-link {
-  display: block;
-  text-align: center;
 }
 
 .under-top__hot-item-img-wrapper {
-  position: relative;
-  display: flex;
-  justify-content: center;
 }
 
 .under-top__hot-item-img {
-  width: 80%;
-  display: block;
-  margin-bottom: 36px;
 }
 
-.under-top__hot-item-link:hover .under-top__hot-item-img.main-img {
-  display: none;
+.main-img {
 }
 
-.under-top__hot-item-img.hover-img {
-  display: none;
-}
-
-.under-top__hot-item-link:hover .under-top__hot-item-img.hover-img {
-  display: block;
-  animation: fadeIn 0.3s linear;
+.hover-img {
 }
 
 .under-top__hot-item-add-cart-btn {
-  position: absolute;
-  bottom: 20%;
-  left: 50%;
-  transform: translateX(-50%);
-  flex-shrink: 0;
-  min-width: 120px;
-  visibility: hidden;
-}
-
-.under-top__hot-item-img-wrapper:hover .under-top__hot-item-add-cart-btn {
-  visibility: visible;
-  animation: slideUp 0.2s linear;
-}
-@keyframes slideUp {
-  0% {
-    transform: translate(-50%, 20%);
-  }
-  100% {
-    transform: translateY(-50%, 0%);
-  }
 }
 
 .under-top__hot-item-name {
