--- a/assets/css/home/section-trending-products-2.css
+++ b/assets/css/home/section-trending-products-2.css
@@ -59,7 +59,10 @@
 }
 
 .trend-prod-2__carousel-list {
-  padding: 64px 32px;
+  --padding-x: 32px;
+  --padding-y: 100px;
+  padding-inline: var(--padding-x);
+  padding-block: var(--padding-y);
   background-color: var(--white-color);
   border-radius: 8px;
   box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
@@ -74,65 +77,18 @@
 }
 
 .trend-prod-2__carousel-item-link {
-  position: relative;
 }
 
 .trend-prod-2__carousel-item-img {
-  width: 100%;
-  height: 400px;
-  object-fit: contain;
-  display: block;
-  margin-bottom: 32px;
-}
-
-.trend-prod-2__carousel-item-img[img-index-2] {
-  display: none;
-}
-
-.trend-prod-2__carousel-item-link:hover
-  .trend-prod-2__carousel-item-img[img-index-1] {
-  display: none;
-}
-
-.trend-prod-2__carousel-item-link:hover
-  .trend-prod-2__carousel-item-img[img-index-2] {
-  display: block;
 }
 
 .trend-prod-2__carousel-item-name {
-  display: block;
-  font-size: 1.6rem;
-  color: var(--text-dark-color);
-  font-weight: 600;
-  margin-bottom: 12px;
-  --line-height: 2.4rem;
-  line-height: var(--line-height);
-  max-height: calc(var(--line-height) * 3);
-  display: block;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 3;
-  overflow: hidden;
-  text-overflow: ellipsis;
 }
 
 .trend-prod-2__carousel-item-price {
-  display: block;
-  font-size: 1.6rem;
-  color: rgba(39, 39, 39, 0.7);
-  font-weight: 300;
 }
 
 .trend-prod-2__carousel-item-add-btn {
-  position: absolute;
-  top: 0;
-  opacity: 0;
-  transition: opacity 0.2s ease-in-out;
-  right: 0;
-}
-
-.trend-prod-2__carousel-item-link:hover .trend-prod-2__carousel-item-add-btn {
-  opacity: 1;
 }
 
 .trend-prod-2__carousel-control {
@@ -225,8 +181,9 @@
   .trend-prod-2__item-2 {
     margin-bottom: 46px;
   }
-  .trend-prod-2__carousel-item-img {
-    height: 200px;
+  .trend-prod-2__carousel-list { 
+    --padding-y: 28px;
+    --padding-x: 16px;
   }
 }
 
@@ -241,7 +198,8 @@
   .trend-prod-2__item-2 {
     margin-bottom: 46px;
   }
-  .trend-prod-2__carousel-item-img {
-    height: 160px;
+  .trend-prod-2__carousel-list { 
+    --padding-y: 16px;
+    --padding-x: 24px;
   }
 }
