--- a/assets/css/collections/section-collection.css
+++ b/assets/css/collections/section-collection.css
@@ -46,3 +46,156 @@
   margin: 0;
   color: var(--text-white-color);
 }
+
+.collection__main-content {
+}
+
+.collection__filter-bar {
+  display: flex;
+  justify-content: space-between;
+  padding: 24px 0;
+}
+
+.collection__filter-bar-availability {
+  font-size: 1.6rem;
+  display: flex;
+  align-items: center;
+  font-weight: 900;
+  display: flex;
+  gap: 8px;
+}
+
+.collection__filter-bar-list {
+  display: flex;
+  gap: 48px;
+}
+
+.collection__filter-bar-item {
+  position: relative;
+}
+
+.collection__filter-bar-item-label {
+  font-size: 1.6rem;
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  cursor: pointer;
+  color: var(--text-dark-color);
+  transition: all 0.2s linear;
+  font-weight: 900;
+}
+
+.collection__filter-bar-list:has(.collection__filter-bar-item-input:checked)
+  .collection__filter-bar-item-label:not(
+    :has(.collection__filter-bar-item-input:checked)
+  ) {
+  opacity: 0.6;
+}
+
+.collection__filter-bar-item-label-icon {
+  height: 24px;
+  width: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background-color: #e9e9e9;
+}
+
+.collection__filter-bar-item-label-icon i {
+  font-size: 1rem;
+  transition: all 0.2s linear;
+}
+
+.collection__filter-bar-item-label:has(
+    .collection__filter-bar-item-input:checked
+  )
+  .collection__filter-bar-item-label-icon
+  i {
+  transform: rotate(180deg);
+}
+
+.collection__brand-list,
+.collection__type-list {
+  position: absolute;
+  left: 50%;
+  top: calc(100% + 16px);
+  transform: translateX(-50%);
+  width: max-content;
+  display: flex;
+  padding: 16px;
+  background-color: var(--white-color);
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  border: 1px solid var(--black-alpha-10);
+  border-radius: 8px;
+  gap: 16px;
+  visibility: hidden;
+}
+
+.collection__filter-bar:has(#collection__filter-bar-item-input-brand:checked)
+  .collection__brand-list {
+  visibility: visible;
+  animation: fadeIn 0.2s linear;
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.collection__filter-bar:has(#collection__filter-bar-item-input-type:checked)
+  .collection__type-list {
+  visibility: visible;
+  animation: fadeIn 0.2s linear;
+}
+
+.collection__brand-item,
+.collection__type-item {
+  flex-shrink: 0;
+  display: block;
+}
+
+.collection__brand-item-label,
+.collection__type-item-label {
+  font-size: 1.6rem;
+  cursor: pointer;
+  padding: 12px 24px;
+  display: block;
+  color: rgba(39, 39, 39, 1);
+  font-weight: 300;
+  border-radius: 8px;
+}
+
+.collection__brand-item-label:has(input:checked) {
+  background-color: var(--black-alpha-5);
+}
+
+.collection__type-item-label:has(input:checked) {
+  background-color: var(--black-alpha-5);
+}
+
+/* Reponsive
+ *
+ *
+ */
+/* Mobile & Tablet */
+@media (max-width: 1023px) {
+}
+
+/* Tablet */
+@media (min-width: 740px) and (max-width: 1023px) {
+}
+
+/* Mobile */
+@media (max-width: 739px) {
+  .collection__banner {
+    --padding-x: 12px;
+    --padding-y: 24px;
+  }
+  .collection_banner-detail-title {
+    font-size: 2.4rem;
+  }
+}
