--- a/assets/css/commons/base.css
+++ b/assets/css/commons/base.css
@@ -22,6 +22,7 @@
   --black-alpha-20: rgba(0, 0, 0, 0.2);
   --black-alpha-10: rgba(0, 0, 0, 0.1);
   --black-alpha-5: rgba(0, 0, 0, 0.05);
+  --black-alpha-2: rgba(0, 0, 0, 0.02);
 }
 
 *,
@@ -323,7 +324,7 @@ a {
 }
 
 .product-card--soldout .product-card__add-cart-btn {
-  display: none!important;
+  display: none !important;
 }
 
 .product-card__sold-out {
@@ -370,4 +371,72 @@ a {
     font-size: 1.6rem;
     font-weight: 600;
   }
+}
+
+/* Custom switch */
+.custom-switch {
+  --switch-width: 40px;
+  --switch-height: 20px;
+  --slider-margin-around: 3px;
+  --slider-size: calc(var(--switch-height) - 2 * var(--slider-margin-around));
+  --slide-length: calc(
+    var(--switch-width) - var(--slider-size) - 2 * var(--slider-margin-around)
+  );
+
+  position: relative;
+  display: inline-block;
+  width: var(--switch-width);
+  height: var(--switch-height);
+}
+
+.custom-switch__checkbox-input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.custom-switch__slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #dfdfdf;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.custom-switch__slider:before {
+  position: absolute;
+  content: '';
+  height: var(--slider-size);
+  width: var(--slider-size);
+  left: var(--slider-margin-around);
+  bottom: var(--slider-margin-around);
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.custom-switch__checkbox-input:checked + .custom-switch__slider {
+  background-color: var(--primary-color-light);
+}
+
+.custom-switch__checkbox-input:focus + .custom-switch__slider {
+  box-shadow: 0 0 1px var(--primary-color-light);
+}
+
+.custom-switch__checkbox-input:checked + .custom-switch__slider:before {
+  -webkit-transform: translateX(var(--slide-length));
+  -ms-transform: translateX(var(--slide-length));
+  transform: translateX(var(--slide-length));
+}
+
+.custom-switch__slider.custom-switch__slider--round {
+  border-radius: var(--switch-height);
+}
+
+.custom-switch__slider.custom-switch__slider--round:before {
+  border-radius: 50%;
 }
