--- a/assets/css/commons/base.css
+++ b/assets/css/commons/base.css
@@ -16,8 +16,12 @@
 
   --over-lay: var(--black-alpha-50);
 
+  --black-alpha-90: rgba(0, 0, 0, 0.9);
+  --black-alpha-80: rgba(0, 0, 0, 0.8);
   --black-alpha-70: rgba(0, 0, 0, 0.7);
+  --black-alpha-60: rgba(0, 0, 0, 0.6);
   --black-alpha-50: rgba(0, 0, 0, 0.5);
+  --black-alpha-40: rgba(0, 0, 0, 0.4);
   --black-alpha-30: rgba(0, 0, 0, 0.3);
   --black-alpha-20: rgba(0, 0, 0, 0.2);
   --black-alpha-10: rgba(0, 0, 0, 0.1);
@@ -65,6 +69,25 @@ a {
   color: inherit;
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(0, 0, 0, 0.2);
+  border-radius: 500px;
+}
+
+::-webkit-scrollbar-track {
+  background: #ffffff;
+  border-radius: 500px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 /* Position */
 .position-relative {
   position: relative;
@@ -98,6 +121,16 @@ a {
 
 .mb-32 {
   margin-bottom: 32px;
+}
+
+.gradient-text-primary-color-light {
+  background: linear-gradient(
+    to right,
+    var(--black-alpha-60),
+    var(--primary-color-light) 70%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 /* Seletion loading
@@ -208,6 +241,13 @@ a {
 
 .btn-icon-leading > i {
   margin-right: 6px;
+}
+
+.btn-disabled {
+  background-color: #e9e9e9;
+  color: var(--text-dark-color);
+  cursor: default;
+  pointer-events: none;
 }
 
 /* Customer input */
@@ -333,8 +373,8 @@ a {
 
 .product-card__sold-out {
   position: absolute;
-  left: 0;
-  top: 0;
+  left: 20px;
+  top: 48px;
   font-size: 1.4rem;
   background-color: #bebdb9;
   color: var(--text-dark-color);
