--- a/assets/css/product-detail/section-product-detail.css
+++ b/assets/css/product-detail/section-product-detail.css
@@ -17,6 +17,13 @@
   position: relative;
 }
 
+.prod-detail-main__carousel:has(
+    .prod-detail-main__carousel-main-img-wrapper-1--zoom
+  )
+  .prod-detail-main__carousel-list-wrapper {
+  display: none;
+}
+
 .prod-detail-main__carousel-list {
   position: absolute;
   top: 0;
@@ -33,7 +40,6 @@
 .prod-detail-main__carousel-list::-webkit-scrollbar {
   width: 0;
   height: 6px;
-  /* display: none; */
 }
 
 .prod-detail-main__carousel-item {
@@ -41,6 +47,12 @@
   padding-top: 100%;
   overflow: hidden;
   cursor: pointer;
+  border-bottom: 3px solid transparent;
+  transition: all 0.2s linear;
+}
+
+.prod-detail-main__carousel-item:hover {
+  transform: translateY(-4px);
 }
 
 .prod-detail-main__carousel-item--active {
@@ -75,9 +87,85 @@
   flex-grow: 1;
 }
 
+.prod-detail-main__carousel-main-img-wrapper-1--zoom {
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: fadeIn 0.2s linear;
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+body:has(.prod-detail-main__carousel-main-img-wrapper-1--zoom) {
+  overflow-y: hidden;
+}
+
+.prod-detail-main__carousel-main-img-wrapper-1-overlay {
+  display: none;
+}
+
+.prod-detail-main__carousel-main-img-wrapper-1--zoom
+  .prod-detail-main__carousel-main-img-wrapper-1-overlay {
+  position: absolute;
+  display: block;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  background-color: var(--black-alpha-50);
+  animation: fadeIn 0.2s linear;
+}
+
+.prod-detail-main__carousel-zoom-close-btn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  outline: none;
+  border: none;
+  color: var(--text-dark-color);
+  background-color: var(--text-white-color);
+  border: 1px solid var(--black-alpha-10);
+  cursor: pointer;
+  transition: all 0.2s linear;
+}
+
+.prod-detail-main__carousel-zoom-close-btn:hover {
+  background-color: var(--text-dark-color);
+}
+
+.prod-detail-main__carousel-zoom-close-btn i {
+  font-size: 2rem;
+}
+
+.prod-detail-main__carousel-zoom-close-btn:hover i {
+  color: var(--text-white-color);
+}
+
 .prod-detail-main__carousel-main-img-wrapper-2 {
   position: relative;
   padding-top: 100%;
+}
+
+.prod-detail-main__carousel-main-img-wrapper-1--zoom
+  .prod-detail-main__carousel-main-img-wrapper-2 {
+  max-width: 1000px;
+  width: calc(100% - 144px);
+  padding-top: min(100%, 1000px);
 }
 
 .prod-detail-main__carousel-main-img {
@@ -88,6 +176,111 @@
   width: 90%;
   height: 90%;
   object-fit: contain;
+}
+
+.prod-detail-main__carousel-main-img-wrapper-1--zoom
+  .prod-detail-main__carousel-main-img {
+  width: 100%;
+  height: 100%;
+}
+
+.prod-detail-main__carousel-img-zoom-btn {
+  position: absolute;
+  bottom: 48px;
+  right: 48px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 12px;
+  border-radius: 50%;
+  border: 1px solid var(--black-alpha-10);
+  background-color: var(--text-white-color);
+  transition: all 0.2s linear;
+}
+
+.prod-detail-main__carousel-main-img-wrapper-1--zoom
+  .prod-detail-main__carousel-img-zoom-btn {
+  display: none;
+}
+
+.prod-detail-main__carousel-img-zoom-btn:hover {
+  background-color: var(--text-dark-color);
+}
+
+.prod-detail-main__carousel-img-zoom-btn i {
+  font-size: 1.8rem;
+  color: var(--text-dark-color);
+}
+
+.prod-detail-main__carousel-img-zoom-btn:hover i {
+  color: var(--text-white-color);
+}
+
+.prod-detail-main__carousel-control {
+  position: absolute;
+  right: 0;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  display: flex;
+  justify-content: space-between;
+  padding: 0 24px;
+}
+
+.prod-detail-main__carousel-main-img-wrapper-1--zoom
+  .prod-detail-main__carousel-control {
+  padding: 0;
+  margin-inline: -60px;
+}
+
+.prod-detail-main__carousel-control-btn {
+  outline: none;
+  border: 1px solid var(--black-alpha-10);
+  padding: 12px;
+  border-radius: 50%;
+  width: 42px;
+  height: 42px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  background-color: var(--text-white-color);
+  transition: all 0.2s linear;
+}
+
+.prod-detail-main__carousel-control-btn:hover {
+  background-color: var(--text-dark-color);
+}
+
+.prod-detail-main__carousel-control-btn i {
+  font-size: 1.6rem;
+  color: var(--text-dark-color);
+}
+
+.prod-detail-main__carousel-control-btn:hover i {
+  color: var(--text-white-color);
+}
+
+.prod-detail-main__carousel-image-index-wrapper {
+  position: absolute;
+  bottom: -32px;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 500px;
+  padding: 12px 24px;
+  font-size: 1.6rem;
+  color: var(--text-dark-color);
+  background-color: var(--text-white-color);
+  border: 1px solid var(--black-alpha-10);
+}
+
+.prod-detail-main__carousel-main-img-wrapper-1--zoom
+  .prod-detail-main__carousel-image-index-wrapper {
+  position: fixed;
+  bottom: 24px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .prod-detail-main__right-container {
@@ -180,9 +373,6 @@
   align-items: center;
   align-self: flex-start;
   background-color: var(--white-color);
-  border: 1px solid var(--black-alpha-20);
-  border-radius: 500px;
-  overflow: hidden;
 }
 
 .prod-detail-main__prod-quantity-decrease-btn,
@@ -190,12 +380,25 @@
   border: none;
   outline: none;
   background-color: transparent;
+  border: 1px solid var(--black-alpha-20);
   padding: 12px 24px;
   display: block;
   cursor: pointer;
   color: #708a5c;
   display: flex;
   align-items: center;
+}
+
+.prod-detail-main__prod-quantity-decrease-btn {
+  border-right: none;
+  border-top-left-radius: var(--border-radius-pill);
+  border-bottom-left-radius: var(--border-radius-pill);
+}
+
+.prod-detail-main__prod-quantity-increase-btn {
+  border-left: none;
+  border-top-right-radius: var(--border-radius-pill);
+  border-bottom-right-radius: var(--border-radius-pill);
 }
 
 .prod-detail-main__prod-quantity-decrease-btn i,
@@ -205,10 +408,21 @@
   align-items: center;
 }
 
+.prod-detail-main__prod-quantity-btn--disabled {
+  border-color: var(--black-alpha-5);
+  color: var(--black-alpha-5);
+  pointer-events: none;
+}
+
 .prod-detail-main__prod-quantity-num {
   font-size: 1.6rem;
   padding: 0 12px;
   color: #708a5c;
+  align-self: stretch;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-block: 1px solid var(--black-alpha-20);
 }
 
 .prod-detail-main__prod-quantity-status {
@@ -410,12 +624,15 @@
       var(--text-white-color)
     );
   }
+  .prod-detail-main__carousel-main-img-wrapper-1 {
+    padding-bottom: 48px;
+  }
   .prod-detail-main__carousel-main-img-wrapper-2 {
     padding-top: 100%;
   }
   .prod-detail-info {
     padding-right: 0;
-    margin-bottom: 32px;
+    margin-bottom: 28px;
   }
   .prod-detail-significant__item-title {
     font-size: 4rem;
@@ -431,6 +648,27 @@
 
 /* Mobile */
 @media (max-width: 739px) {
+  .prod-detail-main__carousel-main-img-wrapper-1--zoom
+    .prod-detail-main__carousel-main-img-wrapper-2 {
+    max-width: 1000px;
+    width: calc(100% - 36px);
+    padding-top: min(100%, 1000px);
+  }
+  .prod-detail-main__carousel-img-zoom-btn {
+    right: 24px;
+    bottom: 24px;
+  }
+  .prod-detail-main__carousel-control {
+    padding: 0;
+  }
+  .prod-detail-main__carousel-main-img-wrapper-1--zoom
+    .prod-detail-main__carousel-control {
+    margin-inline: -12px;
+  }
+  .prod-detail-main__carousel-control-btn {
+    width: 32px;
+    height: 32px;
+  }
   .prod-detail-main__prod-name {
     font-size: 3.2rem;
     margin-bottom: 32px;
