--- a/assets/css/commons/header.css
+++ b/assets/css/commons/header.css
@@ -623,6 +623,11 @@ body:has(
   background-color: transparent;
   border: none;
   outline: none;
+  transition: all 0.15s linear;
+}
+
+.header__cart-close-btn:hover {
+  transform: rotate(90deg);
 }
 
 .header__cart-close-btn-icon {
@@ -653,6 +658,9 @@ body:has(
   height: 100%;
   overflow-y: auto;
   padding-bottom: 36px;
+  gap: 36px;
+  display: flex;
+  flex-direction: column;
 }
 
 .header__cart-footer {
@@ -850,3 +858,5 @@ body:has(
     display: none;
   }
 }
+
+
