stop scroll when modal both mobile + pc

--- a/assets/css/commons/header.css
+++ b/assets/css/commons/header.css
@@ -1,11 +1,14 @@
-body:has(
+:is(body, html):has(
     :is(
         .header__nav-pannel--active,
         .header__search-container--active,
         .header__cart-container-wrapper--active,
+
       )
   ) {
-  overflow-y: hidden;
+  overflow: hidden;
+  position: relative;
+  height: 100%;
 }
 
 .header {
@@ -857,5 +860,3 @@ body:has(
     display: none;
   }
 }
-
-
