--- a/assets/css/admin/admin.css
+++ b/assets/css/admin/admin.css
@@ -148,27 +148,31 @@ a:hover {
     border: none;
 }
 
-.sortable {
+.table {
+    text-align: center;
+}
+
+.data {
     font-family: 'Inter', sans-serif;
     border-collapse: collapse;
     width: 100%;
 }
 
-.sortable td,
-.sortable th {
+.data td,
+.data th {
     border: 1px solid #ddd;
     padding: 8px;
 }
 
-.sortable tr {
+.data tr {
     background-color: #f2f2f2;
 }
 
-.sortable tr:hover {
+.data tr:hover {
     background-color: rgba(150, 150, 150, 0.1);
 }
 
-.sortable th {
+.data th {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
@@ -182,4 +186,105 @@ a:hover {
     cursor: pointer;
     border-radius: 2px;
     background: transparent;
+}
+
+.tabulator-col-content {
+    background-color: #4070f4;
+    color: white;
+}
+
+.tabulator {
+    font-size: 16px;
+}
+
+.form {
+    font-size: 18px;
+    max-width: 60%;
+    background: #fff;
+    margin: auto;
+    padding: 30px;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.125);
+}
+
+.input_field {
+    margin-bottom: 15px;
+    display: flex;
+    align-items: center;
+}
+
+.input_field label {
+    width: 200px;
+    color: #757575;
+    margin-right: 10px;
+}
+
+.input,
+.textarea {
+    width: 100%;
+    outline: none;
+    border: 1px solid #d5dbd9;
+    padding: 8px 10px;
+    border-radius: 3px;
+    transition: all 0.3s ease;
+}
+
+.textarea {
+    resize: none;
+    height: 125px;
+}
+
+.custom_select {
+    position: relative;
+    width: 100%;
+    height: 37px;
+}
+
+.custom_select select {
+    -webkit-appearance: none;
+    appearance: none;
+    border: 1px solid #d5dbd9;
+    width: 100%;
+    height: 100%;
+    padding: 8px 10px;
+    border-radius: 3px;
+    outline: none;
+}
+
+.custom_select:before {
+    content: "";
+    position: absolute;
+    top: 12px;
+    right: 10px;
+    border: 8px solid;
+    border-color: #d5dbd9 transparent transparent transparent;
+    pointer-events: none;
+}
+
+.input:focus,
+.textarea:focus,
+.custom_select select:focus {
+    border: 1px solid #dfe9f5;
+}
+
+.buttons {
+    display: flex;
+    justify-content: space-around;
+}
+
+#delete,
+#save {
+    width: 45%;
+    height: 40px;
+    font-size: 24px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+#delete {
+    background: red;
+    color: white;
+}
+
+#save {
+    background: greenyellow;
 }
