done personal information

--- a/template/card-template.html
+++ b/template/card-template.html
@@ -34,53 +34,40 @@
   <p class="product-card__price">2.499.000đ</p>
 </div>
 
-
-
-
-
-
-
-
-
-
-
-<li class="header__cart-item">
-  <img
-    src="./assets/imgs/home/mock-product-2.webp"
-    alt="Product image"
-    class="header__cart-item-img"
-  />
-
-  <div class="header__cart-item-body">
-    <div class="header__cart-item-infor">
-      <a href="" class="header__cart-item-name">
-        Chuột không dây siêu nhẹ Pulsar X2 Wireless Aim Trainer Pack (Limited
-        Edition)
-      </a>
-      <div class="header__cart-item-price-wrapper">
-        <span class="header__cart-item-total-price">2.499.000đ</span>
-        <span class="header__cart-item-product-price">2.499.000đ</span>
+<form action="">
+  <div class="grid wide">
+    <div class="row">
+      <div class="col l-6 m-6 c-12">
+        <div class="input-group">
+          <label for="name"></label>
+          <div class="custom-input-wrapper">
+            <input
+              id="name"
+              placeholder=" "
+              name="name"
+              type="text"
+              class="custom-input__input-text"
+            />
+            <span class="custom-input__input-label">Name</span>
+          </div>
+        </div>
       </div>
-      <span class="header__cart-item-total-quantity">Còn lại: 8</span>
-    </div>
 
-    <div class="header__cart-item-control">
-      <div class="header__cart-item-quantity-wrapper">
-        <button
-          class="header__cart-item-quantity-control-btn header__cart-item-quantity-decrease-btn"
-        >
-          <i class="bi bi-dash"></i>
-        </button>
-
-        <span class="header__cart-item-quantity-num">1</span>
-
-        <button
-          class="header__cart-item-quantity-control-btn header__cart-item-quantity-increase-btn"
-        >
-          <i class="bi bi-plus"></i>
-        </button>
+      <div class="col l-6 m-6 c-12">
+        <div class="input-group">
+          <label for="email"></label>
+          <div class="custom-input-wrapper">
+            <input
+              id="email"
+              placeholder=" "
+              name="email"
+              type="email"
+              class="custom-input__input-text"
+            />
+            <span class="custom-input__input-label">Email</span>
+          </div>
+        </div>
       </div>
-      <button class="header__cart-item-remove-btn">Bỏ</button>
     </div>
   </div>
-</li>
+</form>
