--- a/assets/css/commons/base.css
+++ b/assets/css/commons/base.css
@@ -41,6 +41,7 @@ html {
   font-size: 62.5%;
   line-height: 1.6rem;
   font-family: 'Inter', sans-serif;
+  scroll-behavior: smooth;
 
   /* Chrome 9-, Safari 5-, iOS 4.2-, Android 3-, Blackberry 7- */
   -webkit-box-sizing: border-box;
@@ -248,7 +249,7 @@ a {
 
 .btn-disabled {
   background-color: #e9e9e9;
-  color: var(--text-dark-color);
+  color: var(--black-alpha-20);
   cursor: default;
   pointer-events: none;
 }
@@ -280,6 +281,7 @@ a {
   top: 50%;
   transform: translateY(-50%);
   transition: all 0.25s ease-in-out;
+  pointer-events: none;
 }
 
 .custom-input__input-text:is(:focus-visible, :focus)
@@ -503,6 +505,7 @@ a {
   -webkit-line-clamp: 3;
   overflow: hidden;
   text-overflow: ellipsis;
+  text-align: justify;
 }
 
 .cart-item__name:hover {
