--- a/template/card-template.html
+++ b/template/card-template.html
@@ -71,3 +71,32 @@
     </div>
   </div>
 </form>
+
+
+
+
+
+  <!-- toastr.options = {
+    closeButton: true,
+    debug: false,
+    newestOnTop: true,
+    progressBar: true,
+    positionClass: 'toast-top-right',
+    preventDuplicates: false,
+    onclick: null,
+    showDuration: '300',
+    hideDuration: '1000',
+    timeOut: '3000',
+    extendedTimeOut: '1000',
+    showEasing: 'swing',
+    hideEasing: 'linear',
+    showMethod: 'fadeIn',
+    hideMethod: 'fadeOut',
+  };
+
+
+
+   toastr['success'](
+      'Một sản phẩm mới vừa được thêm vào rỏ hàng',
+      'Thành công'
+    ); -->
