--- a/assets/css/admin/admin.css
+++ b/assets/css/admin/admin.css
@@ -288,3 +288,41 @@ a:hover {
 #save {
     background: greenyellow;
 }
+
+.modal {
+    padding: 40px;
+    position: absolute;
+    float: left;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 500px;
+}
+
+.modal-title {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.close-button {
+    width: 100%;
+    margin-top: 30px;
+    padding: 12px;
+    background: greenyellow;
+    cursor: pointer;
+}
+
+#add-button {
+    display: inline-block;
+    align-self: center;
+    padding: 2px 5px;
+    margin: 0 2px;
+    border-radius: 3px;
+    background: greenyellow;
+    cursor: pointer;
+    border: 1px solid #aaa;
+}
+
+#add-button:hover {
+    background: grey;
+}
